--- a/1.this:super/.project
+++ b/1.this:super/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>1.This&amp;Super</name>
+	<name>1.this:super</name>
 	<comment></comment>
 	<projects>
 	</projects>
